--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
     implementation 'com.google.firebase:firebase-core:17.4.1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
